[package]
name = "rex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
fork = "0.1.20"
nix = {version = "0.26.2", features = ["process"]}
subprocess = "0.2.9"
ansi-parser = "0.8.0"
libc = "0.2.139"
confy = "0.5.1"
serde = { version = "1.0.152", features = ["derive"] }
dirs = "5.0.1"
rustc-hash = "1.1.0"
native-dialog = { git = "https://github.com/CorneliusCornbread/native-dialog-rs" }
expect-dialog = { path = "/home/jack/repos/expect-dialog-rs/" }
